force-app/main/default/objects/CGC_Milestone_Progress_V2__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Milestone_and_Exercise__c</fullName>
        <label>Milestone and Exercise</label>
        <referenceTo>CGC_Milestone_and_Exercise__c</referenceTo>
        <relationshipName>Milestone_Progress_V2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Progress_Value__c</fullName>
        <label>Progress Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Demo Milestone Progress</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MP-{0}</displayFormat>
        <label>Milestone Progress</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Milestone Progress</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>